2009-01-05:  Switched to generational global root registration of
             callbacks for better performance.

             Requires OCaml 3.11 or higher!!!

2008-12-02: Added function enable_load_extension if it is available.

            Thanks to Pietro Abate <Pietro.Abate@pps.jussieu.fr> for
            the patch!

2008-05-11: Added function column_count, used it internally in place of
            data_count, and improved documentation of associated
            functions.

            Thanks to James Cheney <james.cheney@gmail.com> for the patch!

2008-05-07: Renamed Data.to_string to Data.to_string_debug for converting
            fields to strings with their data constructor.  Replaced the
            previous function with one that behaves more like users
            would expect.  Thanks to Stefano Zacchiroli <zack@debian.org>
            for the suggestion.

2008-04-18: Improved backwards compatibility to older versions of SQLite.

2008-04-04: Fixed a build problem on Mac OS X.

2008-03-27: Fixed a build problem on FreeBSD.

            Thanks to Jaap Boender <Jaap.Boender@pps.jussieu.fr> for
            the patch!

2008-03-14: Synced with Jane Street tree.

2008-03-05: Added a patch to improve Windows support.  Thanks to Alain
            Frisch <alain@frisch.fr> for the patch!

2007-09-04: Fixed a minor bug converting status codes.

2007-08-20: Fixed a GC-bug related to user-defined SQL-functions.

            Thanks to Enrico Tassi <gareuselesinge@virgilio.it> for the
            test case to replicate this problem!

2007-06-17: Added support for user-defined scalar functions.  Thanks to
            Enrico Tassi <gareuselesinge@virgilio.it> for the patch!

            Switched to sqlite3_prepare_v2 internally to avoid the older,
            deprecated sqlite3_prepare-function.  Thanks to Gabriel
            Kerneis <gabriel@kerneis.info> for the hint!

            Removed exec_sql-function, which was buggy in the last