@@ -187,6 +187,8 @@ external bind_parameter_index :
 external transfer_bindings :
   stmt -> stmt -> Rc.t = "caml_sqlite3_transfer_bindings"
 
+external busy_timeout : db -> int -> unit = "caml_sqlite3_busy_timeout"
+
 #if HAS_ENABLE_LOAD_EXTENSION
 external enable_load_extension :
   db -> bool -> bool = "caml_sqlite3_enable_load_extension" "noalloc"
